# HM

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/CMakeBuild/cmake/modules/: BBuildEnv.cmake
source/App/Parcat/: CMakeLists.txt
source/App/SEIRemovalApp/: CMakeLists.txt
source/App/TAppDecoder/: CMakeLists.txt  TAppDecCfg.cpp  decmain.cpp
source/App/TAppDecoderAnalyser/: CMakeLists.txt
source/App/TAppEncoder/: CMakeLists.txt
source/App/TAppMCTSExtractor/: CMakeLists.txt
source/Lib/TLibCommon/: CMakeLists.txt  TComDataCU.h  TComTrQuant.cpp
source/Lib/TLibEncoder/: TEncSearch.cpp
source/hardware/: CMakeLists.txt  hw.h  hw_dequant_stat.cpp  hw_dequant_stat.h  hw_global.cpp  hw_global.h
